syntax = "proto3";

package chora.geonode.v1;

import "cosmos/msg/v1/msg.proto";

// MsgCreate is the Msg/Create request type.
message MsgCreate {
  option (cosmos.msg.v1.signer) = "curator";

  // curator is the address of the node curator.
  string curator = 1;

  // metadata is the metadata of the node.
  string metadata = 2;
}

// MsgUpdateCurator is the Msg/UpdateCurator request type.
message MsgUpdateCurator {
  option (cosmos.msg.v1.signer) = "curator";

  // id is the unique identifier of the node.
  uint64 id = 1;

  // curator is the address of the node curator.
  string curator = 2;

  // new_curator is the address of the new curator.
  string new_curator = 3;
}

// MsgUpdateMetadata is the Msg/UpdateMetadata request type.
message MsgUpdateMetadata {
  option (cosmos.msg.v1.signer) = "curator";

  // id is the unique identifier of the node.
  uint64 id = 1;

  // curator is the address of the node curator.
  string curator = 2;

  // new_metadata is the new metadata of the node.
  string new_metadata = 3;
}
